[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/UI/Hint/ButtonHint.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/Hint/ButtonHintActivator.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true
radius = 20.0

[node name="ButtonHintActivator" type="Node2D"]
script = ExtResource( 2 )

[node name="ButtonHint" parent="." instance=ExtResource( 1 )]
margin_left = 6.0
margin_top = -8.0
margin_right = 6.0
margin_bottom = -8.0

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
visible = false
shape = SubResource( 1 )
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
